[package]
name = "vimdoc2html"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
once_cell = "1.17.0"
regex = "1.7.0"
tree-sitter = "0.20.9"

[dependencies.tree-sitter-vimdoc]
git = "https://github.com/neovim/tree-sitter-vimdoc"
tag = "v1.2.5"
package = "tree-sitter-help"
